# acute

./: .gitmodules  CHANGELOG.md  Makefile.am  Makefile.in  README  configure  configure.ac
build-aux/: bootstrap  devclean  reconfigure-pedantic
doc/: Makefile.am  Makefile.in  acute.info  acute.texi  example-project_make-check.out  sample-test-1.c  sample-test-1_list.out  sample-test-1_run.out  version.texi
example-project/: Makefile.am  Makefile.in  TODO  configure  configure.ac
example-project/build-aux/: bootstrap  devclean  reconfigure-pedantic
example-project/src/: Makefile.am  Makefile.in  hello.c
example-project/tests/: Makefile.am  Makefile.in  an-example-test  sample-test-1.c
src/: Makefile.am  Makefile.in  commands.h  control.h  expectations.h  framework.h  gargs.h  hello.c  macro-machinery-vec.h.t4  macro-machinery.h  module1.c  module2.c  registry.h  runtime.h  tap.h  testsuite.h  typehandlers.h
tests/: Makefile.am  Makefile.in  check-example-project  check-example-project.expected-out  sample-test.c
